@@ -1,3 +1,9 @@
+2006-05-14  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* i386/i386at/autoconf.c (bus_device_init) <lpr> [! LINUX_DEV]: Depend
+	on `MACH_LPR' instead.
+	* i386/i386at/lpr.c: Fix obsolescent `#else' / `#endif' syntax.
+
 2006-05-12  Stefan Siegl  <stesie@brokenpipe.de>
 
 	* linux/dev/glue/kmem.c (vfree): Panic if `vmalloc_list_lookup' did
